@startuml

title __Lab3_MaisosLenteles klasių diagrama__\n

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.Car {
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.CarsGenerator {
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.DemoExecution {
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.ManualTest {
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.SimpleBenchmark {
    }
  }
  

  namespace edu.ktu.ds.lab3.demo {
    class edu.ktu.ds.lab3.demo.Timekeeper {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.KsGui {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.MainWindow {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class edu.ktu.ds.lab3.gui.MainWindowMenu {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class edu.ktu.ds.lab3.gui.MapTable {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.Panels {
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class edu.ktu.ds.lab3.gui.ValidationException {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    interface edu.ktu.ds.lab3.utils.EvaluableMap {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    class edu.ktu.ds.lab3.utils.HashMap {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    enum HashType {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    class edu.ktu.ds.lab3.utils.Ks {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    interface edu.ktu.ds.lab3.utils.Map {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    interface edu.ktu.ds.lab3.utils.Parsable {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    class edu.ktu.ds.lab3.utils.ParsableHashMap {
    }
  }
  

  namespace edu.ktu.ds.lab3.utils {
    interface edu.ktu.ds.lab3.utils.ParsableMap {
    }
  }
  

  edu.ktu.ds.lab3.demo.Car .up.|> edu.ktu.ds.lab3.utils.Parsable
  edu.ktu.ds.lab3.demo.DemoExecution -up-|> javafx.application.Application
  edu.ktu.ds.lab3.demo.SimpleBenchmark o-- edu.ktu.ds.lab3.demo.Timekeeper : timekeeper
  edu.ktu.ds.lab3.gui.MainWindow .up.|> javafx.event.EventHandler
  edu.ktu.ds.lab3.gui.MainWindow -up-|> javafx.scene.layout.BorderPane
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.demo.CarsGenerator : carsGenerator
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.utils.HashType : ht
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.MainWindowMenu : mainWindowMenu
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneButtons
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneParam1
  edu.ktu.ds.lab3.gui.MainWindow o-- edu.ktu.ds.lab3.gui.Panels : paneParam2
  edu.ktu.ds.lab3.gui.MainWindowMenu .up.|> javafx.event.EventHandler
  edu.ktu.ds.lab3.gui.MainWindowMenu -up-|> javafx.scene.control.MenuBar
  edu.ktu.ds.lab3.gui.MapTable -up-|> javafx.scene.control.TableView
  edu.ktu.ds.lab3.gui.Panels -up-|> javafx.scene.layout.GridPane
  edu.ktu.ds.lab3.utils.EvaluableMap .up.|> edu.ktu.ds.lab3.utils.Map
  edu.ktu.ds.lab3.utils.ParsableMap .up.|> edu.ktu.ds.lab3.utils.EvaluableMap
  edu.ktu.ds.lab3.utils.HashMap .up.|> edu.ktu.ds.lab3.utils.EvaluableMap
  edu.ktu.ds.lab3.utils.HashMap o-- edu.ktu.ds.lab3.utils.HashType : ht
  edu.ktu.ds.lab3.utils.ParsableHashMap .up.|> edu.ktu.ds.lab3.utils.ParsableMap
  edu.ktu.ds.lab3.utils.ParsableHashMap -up-|> edu.ktu.ds.lab3.utils.HashMap

@enduml
